<resources>
    <string name="app_name">Desafio Digital House</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeate_password">Repeate password"</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="pratos_principais">Pratos Principais</string>


</resources>